# Bot_Anders

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
bot/: main.py
bot/commands/: games.py  random.py  time.py  web.py
bot/strawpoll_api/: __init__.py  api.py
minesweeper/: GameElements.py  GameLogic.py  README.md  help.txt
