[tool.poetry]
name = "Bot_Anders"
version = "0.1.1"
description = "A simple discord bot"
license = "MIT"
authors = ["Zuplyx <patrick_98@t-online.de>"]
readme = 'README.md'
repository = "https://github.com/Zuplyx/Bot_Anders"
packages = [
{ include = "bot" },
{ include = "minesweeper" },
]

[tool.poetry.dependencies]
python = "^3.6"
"discord.py" = "^1.5.0"
"strawpoll.py" = "^0.2.0"
numpy = "^1.19.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
